syntax = "proto3";

package com.reno.grpc;

option java_multiple_files = true;
option java_package = "com.reno.grpc";

service SimpleService {
  rpc getRequest(SimpleRequest) returns (SimpleResponse) {
  }
}

message SimpleRequest {
  string message = 1;
}

message SimpleResponse {
  string message = 1;
}